use controlsfx validation